# quake-level-loader

./: Cargo.toml  README.md  test_out.txt
assets/: q3shw22.bsp  simple-dm5.bsp  sr3dm10a.bsp
assets/trespass/: trespass_readme.txt
assets/trespass/maps/: trespass.aas
assets/trespass/scripts/: phdm5.shader  trespass.arena
assets/trespass/textures/phdm5/: decal_paper1a.tga  decal_paper1b.tga  decal_plant1.tga  decal_sticker_electric.tga  decal_wires.tga  fan.tga  fan_frame.tga  glass_break_a.tga  glass_break_b.tga  glass_break_c.tga  glass_break_d.tga  jumpgrid.tga  lamp_industrial_square_off.tga  lamp_small.tga  lamp_small_dark.tga  lamp_square_off.tga  leaf.tga  metb_grate.tga  plant_grass01a.tga  plant_grass01d.tga  plant_ivy1.tga  plant_leaf01a.tga  plant_leaf01b.tga  plant_leaf01d.tga  plant_leaf02a.tga  plant_leaf05a.tga  plant_lily1.tga  plant_lily2.tga  plant_mush_back01.tga  plant_mush_top01.tga  water.tga  water2.tga
src/: bsp_transform.rs  cache.rs  directory_header.rs  helpers.rs  lazy.rs  macros.rs  main.rs  raw_bsp.rs  raw_bsp_parsers.rs  texture.rs  texture_flags.rs
src/bsp/: mod.rs  transform.rs
