[package]
name = "quake-level-loader"
version = "0.1.0"
authors = ["Jack Fransham <jack.fransham@cuvva.co>"]

[dependencies]
nom = "^1.0.1"
rand = "^0.3.12"
bitflags = "^0.3.3"
itertools = "^0.4.3"
glium = "^0.13.0"
image = "^0.5.4"
gfx = "^0.8.1"
nalgebra = "^0.4.0"
eventual = { git = "https://github.com/carllerche/eventual", rev = "611adf7fbc4e8e5a37856e2727b61cd309db5a3d" }
