[package]
name = "quake-level-loader"
version = "0.1.0"
authors = ["Jack Fransham <jack.fransham@cuvva.co>"]

[dependencies]
bitflags = "^0.3.3"
eventual = { git = "https://github.com/carllerche/eventual", rev = "611adf7fbc4e8e5a37856e2727b61cd309db5a3d" }
gfx = "^0.8.1"
glium = "^0.13.0"
image = "^0.5.4"
itertools = "^0.4.3"
nalgebra = "^0.4.0"
nom = "^1.0.1"
rand = "^0.3.12"
